<?xml version="1.0" encoding="utf-8"?>
<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_day_switcher"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@drawable/common_list_category_bg" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp" >

        <RadioGroup
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/view_day_rb_workday"
                style="@style/week_left"
                android:checked="true"
                android:text="@string/time_work" />

            <RadioButton
                android:id="@+id/view_day_rb_weekendday"
                style="@style/week_right"
                android:text="@string/time_weekend"
                android:textColor="@drawable/week_text_color" />
        </RadioGroup>

        <ImageView
            android:id="@+id/view_day_bt_advance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="8dp"
            android:background="@drawable/frame_icon_feed_transfer_h"
            android:clickable="true"
            android:contentDescription="@string/app_name" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" >

            <RadioButton
                android:id="@+id/view_day_week_1"
                style="@style/week_left"
                android:checked="true"
                android:text="@string/time_1" />

            <RadioButton
                android:id="@+id/view_day_week_2"
                style="@style/week_middle"
                android:text="@string/time_2" />

            <RadioButton
                android:id="@+id/view_day_week_3"
                style="@style/week_middle"
                android:text="@string/time_3" />

            <RadioButton
                android:id="@+id/view_day_week_4"
                style="@style/week_middle"
                android:text="@string/time_4" />

            <RadioButton
                android:id="@+id/view_day_week_5"
                style="@style/week_middle"
                android:text="@string/time_5" />

            <RadioButton
                android:id="@+id/view_day_week_6"
                style="@style/week_middle"
                android:text="@string/time_6" />

            <RadioButton
                android:id="@+id/view_day_week_7"
                style="@style/week_right"
                android:text="@string/time_7" />
        </RadioGroup>

        <ImageView
            android:id="@+id/view_day_bt_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="8dp"
            android:background="@drawable/frame_icon_feed_transfer_h"
            android:clickable="true"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

</ViewSwitcher>