<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/pop_advance_tv_1"
        style="@style/pop_list_text_style"
        android:text="@string/time_advance_pop_1" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/list_divider" />

    <TextView
        android:id="@+id/pop_advance_tv_2"
        style="@style/pop_list_text_style"
        android:text="@string/time_advance_pop_2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/list_divider" />

    <TextView
        android:id="@+id/pop_advance_tv_3"
        style="@style/pop_list_text_style"
        android:text="@string/time_advance_pop_3" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/list_divider" />

    <TextView
        android:id="@+id/pop_advance_tv_4"
        style="@style/pop_list_text_style"
        android:text="@string/time_advance_pop_4" />

</LinearLayout>